<resources>
    <string name="app_name">Laburapp</string>
    <string name="login">Iniciar Sesion</string>
    <string name="email">Email</string>
    <string name="invalidEmail">Email invalido</string>
    <string name="password">Contraseña</string>
    <string name="passError">El Password debe contener al menos 8 caracteres y al menos un numero y caracter especial</string>
    <string name="remember">Recordar</string>
    <string name="newUser">Registrarse</string>
    <string name="completeField">Este campo debe estar completo</string>
    <string name="invalidChar">Carateres invalidos</string>
    <string name="lastStamp">Ultimo Fichaje</string>
    <string name="none">Ninguno</string>
    <string name="stamp">Fichar</string>
    <string name="invites">Invitaciones</string>
    <string name="noUserInv">No se encontro un usuario ese email</string>
    <string name="admin">Administrador</string>
    <string name="newNode">Nuevo nodo</string>
    <string name="dltNode">Eliminar Nodo</string>
    <string name="nodeDeleted">Nodo eliminado</string>
    <string name="dltNodeQuestion">¿Esta seguro que quiere eliminar el Nodo?</string>
    <string name="nodeCreated">Nodo creado correctamente</string>
    <string name="addUser">Agregar Usuario</string>
    <string name="addNewNode">Crear nuevo nodo</string>
    <string name="name">Nombre</string>
    <string name="lastName">Apellido</string>
    <string name="nodeName">Nombre del Nodo</string>
    <string name="entranceSche">Horario de Entrada</string>
    <string name="exitSche">Horario de Salida</string>
    <string name="schedule">Horarios</string>
    <string name="laborableDays">Dias Laborales</string>
    <string name="day1">Lu</string>
    <string name="day2">Ma</string>
    <string name="day3">Mi</string>
    <string name="day4">Ju</string>
    <string name="day5">Vi</string>
    <string name="day6">Sa</string>
    <string name="day7">Do</string>
    <string name="pickSche">Elegir Horario</string>
    <string name="security">Seguridad</string>
    <string name="cFinger">Con Huella Digital</string>
    <string name="cGPS">Con Sistema GPS</string>
    <string name="acept">Aceptar</string>
    <string name="reject">Rechazar</string>
    <string name="cancel">Cancelar</string>
    <string name="NFCtitle">Lector NFC</string>
    <string name="NFCpass">Acerque su dispositivo a la tarjeta NFC</string>
    <string name="fingerTitle">Huella Dactilar</string>
    <string name="fingerPass">Comprueba tu identidad con tu huella digital</string>
    <string name="users">Usuarios</string>
    <string name="inviteEmail">Ingrese el email del usuario a invitar</string>
    <string name="noSensorFinger">No se detecto ningun sensor de huella digital</string>
    <string name="wrongFinger">No se puede reconocer la huella escaneada</string>
    <string name="fingerError">Ocurrió un error inesperado accediendo a tu huella</string>
    <string name="NFCfingerError">Error leyendo NFC</string>
    <string name="locationError">Error de ubicacion</string>
    <string name="closeShift">Cerraste a las: </string>
    <string name="openShift">Abriste a las: </string>
    <string name="marshVersion">Necesitas una version de Android superior a Marshmallow</string>
    <string name="fingerSuccess">Lectura de huella: Exito!</string>
    <string name="inviteSend">Invitacion enviada</string>
    <string name="inviteSendError">Invitacion enviada</string>
    <string name="noUserForMail">No se encontro un usuario ese email</string>
    <string name="GPSpermission">Permiso de GPS no autorizado</string>
    <string name="GPSdisabled">Por favor habilite su sistema GPS</string>
    <string name="dltUser">Eliminar Usuario</string>
    <string name="dltedUser">Usuario Eliminado</string>
    <string name="dltUserAsk">"¿Esta seguro de Eliminar al Usuario del Nodo?</string>
    <string name="invite">Invitacion</string>
    <string name="inviteAsk">Desea aceptar la invitacion al nodo </string>
    <string name="inviteAccepted">Invitacion aceptada</string>
    <string name="inviteRejected">Invitacion rechazada</string>
</resources>
