<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ar.com.sifir.laburapp.MainActivity">

    <ProgressBar
        android:id="@+id/progress_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:gravity = "center_vertical|center_horizontal"/>
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="247dp"
        android:layout_height="258dp"
        app:srcCompat="@drawable/laburapp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <ar.com.sifir.laburapp.widget.SimpleFormEditText
        android:id="@+id/user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textPersonName" />

    <ar.com.sifir.laburapp.widget.SimpleFormEditText
        android:id="@+id/pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/user"
        android:layout_alignStart="@+id/user"
        android:layout_alignLeft="@+id/user"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/login"
        style="@android:style/Widget.Material.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pass"
        android:layout_alignStart="@+id/pass"
        android:layout_alignLeft="@+id/pass"
        android:onClick="login"
        android:text="@string/login" />

    <Button
        android:id="@+id/signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:onClick="signup"
        android:text="@string/newUser" />

    <CheckBox
        android:id="@+id/remember"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/login"
        android:layout_alignEnd="@+id/pass"
        android:layout_alignRight="@+id/pass"
        android:layout_alignBottom="@+id/login"
        android:text="@string/remember" />

</RelativeLayout>
